# muteki

./: .env.example  .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  README.md  README_CN.md  ROADMAP.md  SECURITY.md  init.sh  pyproject.toml  run.sh
.claude/: launch.json
apps/tui/: __main__.py  app.py
apps/web/: account_test.py  drivers.py  llm_test.py  run_manager.py  run_meta.py  server.py  titler.py  worker_config.py  worker_models.py
cmd/runtime-agent/: agent_test.go  env.go  go.mod  main.go  protocol.go  util.go  (+1 more)
docker/: Dockerfile.pwn
docs/: 工作原理.md
examples/: mock_solver.py  vuln_web_app.py
muteki_kit/: __init__.py  result.py  submit.py  triage.py
public_eval/: RESULTS.md
scripts/: install_blackboard_skill.sh
tests/: test_blackboard_skill.py  test_cli_executor.py  test_connectivity_probes.py  test_container_exec.py  test_container_oom.py  test_control_client.py  test_cost.py  test_credential_accounts.py  test_distill_events.py  test_dotenv_boot.py  test_event_bus.py  test_events.py  test_gate.py  test_kit_crypto.py  test_kit_encoding.py  test_kit_forensics.py  test_kit_jwt.py  test_kit_misc.py  test_kit_pwn.py  test_kit_reverse.py  test_kit_sqli.py  test_kit_submit.py  test_kit_triage.py  test_kit_web_http.py  test_learning.py  test_lifecycle_wiring.py  test_llm.py  test_llm_base_url_wiring.py  test_llm_live.py  test_llm_timeout.py  test_mock_solver.py  test_multi_flag.py  test_pentest_mode.py  test_reason.py  test_result_peek.py  test_retention.py  test_session_store.py  test_shared_graph.py  test_solve_graph.py  test_standby_hitl.py  (+11 more)
(+112 files in other folders)
