[project]
name = "project-muteki"
version = "0.2.5"
description = "Project Muteki (無敵): autonomous multi-model CTF-solving AI agent swarm"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "anyio>=4.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
    "requests>=2.31",
    "pyjwt>=2.8",
    "textual>=0.60",
    "rich>=13.7",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "gmpy2>=2.3.0",
    "sympy>=1.14.0",
    "pycryptodome>=3.23.0",
    "pillow>=12.2.0",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "magika>=1.0.3",
    "scapy>=2.7.0",
    "pyzbar>=0.1.9",
    "zxing-cpp>=3.0.0",
    "qrcode>=8.2",
    "ropgadget>=7.7",
    "capstone>=5.0.9",
    "r2pipe>=1.9.8",
    "lief>=0.17.6",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["muteki"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
timeout = 120

[tool.muteki]
deepseek_base_url = "https://api.deepseek.com/v1"
